--- a/local.properties
+++ b/local.properties
@@ -1,1 +1,9 @@
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Sun Aug 24 10:04:38 CEST 2025
 OPENAI_API_KEY=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
+sdk.dir=/Users/danielhintz/Library/Android/sdk
