--- a/.github/workflows/android-room-ci.yml
+++ b/.github/workflows/android-room-ci.yml
@@ -1,94 +1,58 @@
-name: Android CI (Build + Room Schema Guard + Instrumented Tests)
+name: Android Room CI
 
 on:
-  push:
-    branches: [ main, master ]
   pull_request:
-    branches: [ main, master ]
+    paths-ignore: [ "**.md" ]
+  push:
+    branches: [ main ]
+    paths-ignore: [ "**.md" ]
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+permissions:
+  contents: read
 
 jobs:
-  build-and-schema-guard:
-    name: Build & Unit Tests & Schema Guard
+  room-ci:
     runs-on: ubuntu-latest
-    outputs:
-      cache-hit: ${{ steps.gradle-cache.outputs.cache-hit }}
+    timeout-minutes: 30
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: "17"
+          java-version: '21'
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v3
 
-      - name: Accept SDK licenses
-        run: yes | sdkmanager --licenses
+      - name: Cache Android build tools (optional)
+        run: echo "Gradle action handled cache."
 
-      - name: Gradle cache
-        id: gradle-cache
-        uses: gradle/gradle-build-action@v2
+      - name: Run Unit Tests (incl. Room)
+        run: ./gradlew testDebugUnitTest --stacktrace
 
-      - name: Verify Gradle wrapper
-        uses: gradle/wrapper-validation-action@v2
-
-      - name: Create local.properties
-        run: cp local.properties.sample local.properties
-
-      - name: Build (assembleDebug) + Unit Tests
-        run: ./gradlew --stacktrace --no-daemon clean assembleDebug testDebugUnitTest
-
-      # ⚠️ Room Schema Guard: schlägt FEHL, wenn sich Schemas ändern, aber nicht committed sind
-      - name: Room Schema Guard (fail if schemas changed)
+      - name: Verify Room schemas are committed
         run: |
-          # 'intent to add' für diff auf unversionierte Dateien
-          git add -N app/schemas || true
-          # Wenn es Änderungen in app/schemas gibt -> fail mit Diff
-          if ! git diff --quiet -- app/schemas; then
-            echo "❌ Room schemas have changed. Please commit updated JSON schemas (app/schemas/**)."
-            echo "Diff:"
-            git --no-pager diff -- app/schemas || true
-            exit 1
+          if [ -d app/schemas ] || [ -d schemas ]; then
+            git add -A
+            git diff --exit-code --name-only -- app/schemas schemas || { 
+              echo "::error::Room schema hat sich geändert. Bitte Schemas committen."; 
+              exit 1; 
+            }
           else
-            echo "✅ No schema changes detected."
+            echo "Kein Schema-Ordner gefunden – check übersprungen."
           fi
 
-  instrumented-tests:
-    name: Instrumented Tests (Emulator, incl. Room migration)
-    runs-on: ubuntu-latest
-    needs: build-and-schema-guard
-    timeout-minutes: 35
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Upload Test Reports
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
-          distribution: temurin
-          java-version: "17"
-
-      - name: Gradle cache
-        uses: gradle/gradle-build-action@v2
-
-      # Startet einen Emulator und fährt die Instrumented Tests
-      - name: Run connectedAndroidTest on API 34
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 34
-          arch: x86_64
-          target: google_apis
-          profile: Pixel_5
-          script: |
-            ./gradlew --no-daemon assembleDebug assembleAndroidTest
-            # kompletten Instrumented-Test-Satz ausführen:
-            ./gradlew --stacktrace connectedAndroidTest
-            # Optional: nur die Migrations-Tests:
-            # ./gradlew --stacktrace connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.class=com.example.fitapp.data.db.Migration7to8Test
+          name: room-unit-test-reports
+          path: |
+            **/build/test-results/**
+            **/build/reports/tests/**
+          retention-days: 7
+          if-no-files-found: warn
