--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,5 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-android.useAndroidX=true
-kotlin.code.style=official
-
-# Configuration cache and build cache settings
-org.gradle.configuration-cache=true
-org.gradle.configuration-cache.problems=warn
-org.gradle.build-cache=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -Dkotlin.daemon.jvm.options=-Xmx2g
+org.gradle.daemon=false
 org.gradle.parallel=true
+android.useAndroidX=true
+android.enableJetifier=false
