--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release Build
 
 on:
   push:
@@ -9,12 +9,36 @@ permissions:
   contents: read
 
 jobs:
-  build-release:
-    runs-on: ubuntu-latest
+  bundle:
+    runs-on: ubuntu-22.04
     timeout-minutes: 60
 
+    env:
+      GRADLE_OPTS: "-Djava.net.preferIPv4Stack=true -Djava.net.preferIPv6Addresses=false -Dfile.encoding=UTF-8"
+
     steps:
+      - name: Force IPv4 (disable IPv6)
+        run: |
+          echo 'precedence ::ffff:0:0/96  100' | sudo tee -a /etc/gai.conf
+          sudo sysctl -w net.ipv6.conf.all.disable_ipv6=1
+          sudo sysctl -w net.ipv6.conf.default.disable_ipv6=1
+          sudo sysctl -w net.ipv6.conf.lo.disable_ipv6=1
+
+      - name: Network warm-up (IPv4)
+        run: |
+          for i in {1..5}; do
+            echo "Warmup try $i ..."
+            if curl -4fsSL https://api.github.com/rate_limit > /dev/null; then
+              echo "Network OK"; break
+            fi
+            sleep 3
+          done
+
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: gradle/wrapper-validation-action@v2
 
       - uses: actions/setup-java@v4
         with:
@@ -23,15 +47,19 @@ jobs:
 
       - uses: gradle/gradle-build-action@v3
 
-      # Falls du signierst, setze hier deine Secrets (KS_*).
+      # Optional: Signing vorbereiten (falls Play-Upload geplant)
       # - name: Decode signing keystore
-      #   run: |
-      #     echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 -d > keystore.jks
+      #   run: echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 -d > keystore.jks
 
-      - name: Build release AAB
-        run: ./gradlew bundleRelease --stacktrace
+      - name: Build Release bundle (retry)
+        uses: nick-invision/retry@v3
+        with:
+          max_attempts: 3
+          timeout_minutes: 30
+          command: |
+            ./gradlew --stacktrace bundleRelease
 
-      - name: Upload AAB
+      - name: Upload AAB & mapping
         uses: actions/upload-artifact@v4
         with:
           name: app-release
