--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ app/build/outputs/proguard-usage/
 
 # Models copied to assets (generated during build)
 app/src/main/assets/models/
+app/src/main/ml/
