--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -50,6 +50,7 @@ junit = "4.13.2"
 android-test-junit = "1.2.1"
 espresso = "3.6.1"
 android-test-core = "1.6.1"
+tensorflow-lite-metadata = "0.2.0"
 
 [libraries]
 # Kotlin / Serialization / Coroutines
@@ -130,6 +131,7 @@ junit = { module = "junit:junit", version.ref = "junit" }
 android-test-junit = { module = "androidx.test.ext:junit", version.ref = "android-test-junit" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
 android-test-core = { module = "androidx.test:core", version.ref = "android-test-core" }
+tensorflow-lite-metadata = { group = "org.tensorflow", name = "tensorflow-lite-metadata", version.ref = "tensorflow-lite-metadata" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
