Add comprehensive .gitignore and backup old version

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,241 @@
-# Android
+#########################
+# Android FitApp - Complete .gitignore
+#########################
+
+#########################
+# Android Studio / IntelliJ
+#########################
+*.iml
+.idea/
+.idea/*
+!.idea/codeStyles/
+!.idea/copyright/
+!.idea/runConfigurations/
+!.idea/scopes/
+!.idea/vcs.xml
+local.properties
+.DS_Store
+.gradle/
+gradle-app.setting
+.gradletasknamecache
+
+#########################
+# Android Build Files
+#########################
+build/
+*/build/
+app/build/
+.externalNativeBuild/
+.cxx/
+outputs/
+*.apk
+*.aab
+*.ap_
+*.dex
+*.class
+
+#########################
+# Android NDK
+#########################
+obj/
+.externalNativeBuild
+.cxx
+cmake-build-*/
+.ninja_deps
+.ninja_log
+
+#########################
+# Android Keystore
+#########################
+*.jks
+*.keystore
+key.properties
+keystore.properties
+signing.properties
+
+#########################
+# AI/ML Models & Cache
+#########################
+models/cache/
+*.pb
+*.tflite.tmp
+ml_cache/
+tensorflow_cache/
+.onnx_cache/
+
+# Aber echte Modelle behalten:
+!models/tflite/*.tflite
+!models/onnx/*.onnx
+
+#########################
+# Development Container
+#########################
+.devcontainer/
+.copilot/
+.vscode/settings.json
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/.ropeproject
+*.code-workspace
+
+#########################
+# Git & CI/CD Temp Files
+#########################
+.git/
+*.patch
+*.diff
+.merge_file_*
+.orig
+
+#########################
+# API Keys & Secrets
+#########################
+secrets.properties
+api_keys.properties
+.env
+.env.local
+.env.production
+google-services.json.backup
+firebase_options_backup.dart
+
+#########################
+# Testing & Coverage
+#########################
+coverage/
+test-results/
+jacoco/
+lint-results*
+test-outputs/
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+
+#########################
+# Logs & Debug
+#########################
+*.log
+*.tmp
+logs/
+debug/
+crash-reports/
+proguard/
+mapping.txt
+seeds.txt
+usage.txt
+
+#########################
+# Backup & Temp Files
+#########################
+*~
+*.bak
+*.backup
+*.old
+*.orig
+*.rej
+*.swp
+*.swo
+*#
+.#*
+*_backup
+*_old
+
+#########################
+# OS Generated Files
+#########################
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+#########################
+# Package Managers
+#########################
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+#########################
+# Database & Cache
+#########################
+*.db
+*.db-journal
+*.sqlite
+*.sqlite3
+.room/
+database_backup/
+db_backup/
+
+#########################
+# Network & Proxy
+#########################
+.proxy
+*.pac
+.network_security_config.xml.bak
+
+#########################
+# Generated Documentation
+#########################
+docs/generated/
+javadoc/
+kdoc/
+dokka/
+
+#########################
+# Specific to this FitApp
+#########################
+# User data backups
+user_data_backup/
+workout_exports/
+nutrition_exports/
+
+# Large binary assets (except models)
+assets/videos/*.mp4
+assets/audio/*.wav
+assets/images/high_res/
+
+# Performance profiling
+*.hprof
+*.trace
+perfetto_trace/
+
+#########################
+# Keep Important Files
+#########################
+# Explizit behalten:
+!README.md
+!LICENSE
+!CHANGELOG.md
+!.github/
+!gradle/wrapper/
+!gradlew
+!gradlew.bat
+!proguard-rules.pro
+!consumer-rules.pro# Android
 *.iml
 .gradle
 /local.properties
@@ -33,3 +270,6 @@ app/build/outputs/proguard-usage/
 # Models copied to assets (generated during build)
 app/src/main/assets/models/
 app/src/main/ml/
+
+
+
