--- a/.gitignore
+++ b/.gitignore
@@ -79,15 +79,6 @@ tensorflow_cache/
 *.code-workspace
 
 #########################
-# Git & CI/CD Temp Files
-#########################
-.git/
-*.patch
-*.diff
-.merge_file_*
-.orig
-
-#########################
 # API Keys & Secrets
 #########################
 secrets.properties
@@ -96,7 +87,6 @@ api_keys.properties
 .env.local
 .env.production
 google-services.json.backup
-firebase_options_backup.dart
 
 #########################
 # Testing & Coverage
@@ -106,10 +96,6 @@ test-results/
 jacoco/
 lint-results*
 test-outputs/
-.coverage
-htmlcov/
-.pytest_cache/
-.tox/
 
 #########################
 # Logs & Debug
@@ -135,66 +121,23 @@ usage.txt
 *.rej
 *.swp
 *.swo
-*#
-.#*
-*_backup
-*_old
 
 #########################
 # OS Generated Files
 #########################
-# macOS
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
-
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Linux
 *~
-.fuse_hidden*
 .directory
 .Trash-*
-.nfs*
 
 #########################
-# Package Managers
+# Keep Important Files
 #########################
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-package-lock.json
-yarn.lock
-
-#########################
-# Database & Cache
-#########################
-*.db
-*.db-journal
-*.sqlite
-*.sqlite3
-.room/
-database_backup/
-db_backup/
-
-#########################
-# Network & Proxy
-#########################
-.proxy
-*.pac
-.network_security_config.xml.bak
-
-#########################
+!README.md
+!LICENSE
+!.github/
+!gradle/wrapper/
+!gradlew
+!gradlew.bat
+!proguard-rules.pro
